--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ body {
 
 .cartIconWrap {
     position: relative;
+    cursor: pointer;
 }
 
 .cartIconWrap span {
@@ -117,8 +118,62 @@ body {
 
 .basketTotal {
     font-weight: bold;
-    text-align: right;
 }
+
+.not_date{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.not_date_text{
+    color: red;
+}
+
+/* Кнопка */
+.cl-btn-7 {
+    width: 20px;
+    height: 20px;
+    border-radius: 20px;
+    position: relative;
+    z-index: 1;
+    cursor: pointer;
+    float: right
+}
+.cl-btn-7:before {
+    content: '+';
+    color: #337AB7;
+    position: absolute;
+    z-index: 2;
+    transform: rotate(45deg);
+    font-size: 30px;
+    line-height: 1;
+    top: -6px;
+    left: 3px;
+    transition: all 0.3s cubic-bezier(0.77, 0, 0.2, 0.85);
+}
+.cl-btn-7:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 100%;
+    background: #337AB7;
+    z-index: 1;
+    transition: all 0.3s cubic-bezier(0.77, 0, 0.2, 0.85);
+    transform: scale(0.01);
+}
+.cl-btn-7:hover:after {
+    transform: scale(1);
+}
+.cl-btn-7:hover:before {
+    transform: scale(0.8) rotate(45deg);
+    color: #fff;
+}
+
+
 
 .newArrivals {
     background: #f8f3f4;
