--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ body {
 }
 
 .searchIcon {
-    margin-left: 41px;
+    margin-right: 30px;
+    cursor: pointer;
 }
 
 .cartIconWrap {
@@ -78,6 +79,14 @@ body {
 
 .rightHeader {
     position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.search {
+    margin-right: 10px;
+    height: 25px;
 }
 
 .basket {
@@ -152,26 +161,8 @@ body {
     left: 3px;
     transition: all 0.3s cubic-bezier(0.77, 0, 0.2, 0.85);
 }
-.cl-btn-7:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 100%;
-    background: #337AB7;
-    z-index: 1;
-    transition: all 0.3s cubic-bezier(0.77, 0, 0.2, 0.85);
-    transform: scale(0.01);
-}
-.cl-btn-7:hover:after {
-    transform: scale(1);
-}
-.cl-btn-7:hover:before {
-    transform: scale(0.8) rotate(45deg);
-    color: #fff;
-}
+
+
 
 
 
@@ -435,6 +426,7 @@ body {
     padding-left: 8px;
     padding-right: 8px;
     margin-bottom: 96px;
+    margin-top: 20px;
 }
 
 @media (min-width: 768px) {
@@ -753,6 +745,8 @@ body {
 }
 
 .footer {
+    position: sticky;
+   
     background: #222224;
     padding: 43px 20px 10px;
 }
